--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Hello 👋</h1>
-<app-saisie></app-saisie>
+<app-header></app-header>
+<main>
+    <app-client-form></app-client-form>
+</main>
+<app-footer></app-footer>
