--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 main {
   flex: 1;
+  display: flex;
 }
 app-header {
   padding: 20px 0;
@@ -10,4 +11,13 @@ app-client-form {
   width: 100%;
   max-width: 30rem;
   margin: 0 auto;
+}
+app-recap {
+  width: 100%;
+  max-width: 25rem;
+  background-color: #1cad7e;
+  height: 100%;
+  margin: 1rem;
+  padding: 25px;
+  border-radius: 4px;
 }
