--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <main>
-    <app-client-form></app-client-form>
+    <app-client-form [form]="form" (valueChangeEventEmitter)="changeValue($event)" (submitEvent)="submit($event)">
+    </app-client-form>
+    <app-recap *ngIf="isSubmitted" [data]="form"></app-recap>
 </main>
 <app-footer></app-footer>
