--- a/src/app/client-form/client-form.component.html
+++ b/src/app/client-form/client-form.component.html
@@ -1,29 +1,7 @@
 <h1>Informations personnelles</h1>
-<app-input type="text" label="Prénom" [value]="user.firstname.value" [isValid]="user.firstname.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'firstname')"></app-input>
-<app-input type=" text" label="Nom de famille" [value]="user.lastname.value" [isValid]="user.lastname.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'lastname')">
-</app-input>
-<app-input type="text" label="Email" [value]="user.email.value" [isValid]="user.email.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'email')"></app-input>
-<app-input type="text" label="Adresse" [value]="user.address.value" [isValid]="user.address.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'address')"></app-input>
-<app-input type="text" label="Code postal" [value]="user.postalCode.value" [isValid]="user.postalCode.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'postalCode')">
-</app-input>
-<app-input type="text" label="Ville" [value]="user.city.value" [isValid]="user.city.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'city')"></app-input>
-<app-input type="text" label="Pays" [value]="user.country.value" [isValid]="user.country.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'country')"></app-input>
-<app-input type="text" label="Numero de téléphone" [value]="user.phoneNumber.value" [isValid]="user.phoneNumber.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'phoneNumber')"></app-input>
-<app-input type="text" label="Civilité" [value]="user.civility.value" [isValid]="user.civility.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'civility')"></app-input>
 
-<h1>Informations de connexion</h1>
-<app-input type="text" label="Nom d'utilisateur" [value]="user.login.value" [isValid]="user.login.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'login')"></app-input>
-<app-input type="text" label="Mot de passe" [value]="user.password.value" [isValid]="user.password.isValid"
-    (valueChangeEventEmitter)="changeValue($event, 'password')"></app-input>
+<app-input *ngFor="let field of form" type="{{field.type}}" label="{{field.label}}" [value]="field.value"
+    [isValid]="field.isValid" (valueChangeEventEmitter)="changeValue($event, field.accessor)" [pattern]="field.pattern">
+</app-input>
 
-<button (click)="submit()">Valider</button>
+<button class="submit" (click)="submit()">Valider</button>
