--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,5 +1,6 @@
 <div class="form-row">
     <label for="{{ label }}">{{ label }}</label>
-    <input type="{{ type }}" [(ngModel)]="value" id="{{ label }}" (input)="handleInputChange($event)" />
-    <span *ngIf="!isValid" class="error">Error</span>
+    <input type="{{ type }}" [(ngModel)]="value" id="{{ label }}" (input)="handleInputChange($event)"
+        [ngClass]="{'error' : !isValid}" />
+    <span *ngIf="!isValid" class="error">Le champ n'est pas valide</span>
 </div>
